--- a/accounts/templates/edit_profile.html
+++ b/accounts/templates/edit_profile.html
@@ -1,30 +1,42 @@
 {% extends "main.html" %} 
 {% load static %} 
 {% load crispy_forms_tags %}
-{% block content %} <br /><br />
+{% load i18n %}
+
+{% block head %}
+  {{ wizard.form.media }}
+{% endblock %}
+
+{% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-sm-10 col-md-10 col-lg-8 mx-auto">
-      <div class="card card-signin my-5">
-        <div class="card-body">
-          <h3 class="text-center">
-            <b>Update Your Profile</b>
-          </h3>
-          <form class="form-signin" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group">
-              <br />
-              {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-              <button class="btn btn-lg btn-primary btn-block" type="submit">
-                Update</button
-              ><br /><br />
-            </div>
-          </form>
-        </div>
+  <div class="col-8 offset-2">
+    <div id="app">
+      <step-navigation :steps="steps" :currentstep="currentstep">
+      </step-navigation>
+
+      <div v-show="currentstep == {{ wizard.steps.step1 }}">
+        <form action="" method="post">
+          {% csrf_token %}
+          <table>
+            {{ wizard.management_form }}
+            {% if wizard.form.forms %}
+                {{ wizard.form.management_form }}
+                {% for form in wizard.form.forms %}
+                    {{ form|crispy }}
+                {% endfor %}
+            {% else %}
+                {{ wizard.form|crispy }}
+            {% endif %}
+          </table>
+          {% if wizard.steps.prev %}
+            <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% translate "first step" %}</button>
+            <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% translate "prev step" %}</button>
+          {% endif %}
+          <input type="submit" value="{% translate "submit" %}" class="btn btn-primary"/>
+        </form>
       </div>
     </div>
+
   </div>
 </div>
-{% endblock content %}
+{% endblock %}
