--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,36 +34,48 @@
             font-size: 28px !important;
         }
     }
+
+    .hero-images {
+        border-top-style: solid;
+        border-bottom-style: solid;
+        border-color: #29569F;
+        border-width: 5px;
+        margin-bottom: 30px;
+        margin-top: -30px;
+    }
+
 </style>
 
 <div class="jumbotron jumbotron-fluid" style="background-color: white">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-6 col-lg-9 col-md-10 my-3">
-                <img src="{% static 'images/hero pic.png' %}" width="510" height="430" style="position:absolute; left:580px; top: -80px" />
-                <div class="hero__caption">
-                    <h1 style="font-weight: 900 !important; font-size: 34px !important">Welcome to Sierra Leone Labour Market Information System</h1>
+    <div style="margin-top: -70px;">
+        <!--Hero Section Start-->
+        <div>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" style="margin-bottom: 40px; margin-top: 30px;">
+                    <img src="{% static 'images/mining-workers.jpg' %}" height="580" width="260" class="d-block w-100 hero-images" alt="Afrobarometer">
+                    </div>
+                    <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
+                    <img src="{% static 'images/farming.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
+                    </div>
+                    <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
+                    <img src="{% static 'images/engineering.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
+                    </div>
+                    <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
+                    <img src="{% static 'images/workers.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="USAid">
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
             </div>
-
-            <div class="row">
-                <div class="col-6 px-4 my-3">
-                    <p class="lead" style="line-height:2.0; color: black; font-weight: 500">Discover trends in the Sierra Leone jobs market by utilizing our labour market information system.</p>
-                </div>
-            </div>
-      <div class="row" style="margin-top: 25px">
-        <div class="col-3">
-          <a href="{% url 'jobs' %}" class="btn mx-2" style="color:white; background-color:#29569F">Search Jobs Online</a>
-        </div>
-        <div class="col-3">
-          <a href="{% url 'post_job' %}" class="btn mx-2" style="color:white; background-color:#29569F">Post Jobs Online</a>
-        </div>
-      </div>
-    </div>
-    </div>
-
-    <img src="{% static 'images/double-down.gif' %}" width="40" height="40" style="position: absolute; left:600px !important;" />
-  </div>
+          </div>
+        <!--Hero Section End-->
 
 <div class="container my-3" style="margin-top: -30px !important">
     <div class="row">
@@ -94,7 +106,7 @@
                 <a href="{% url 'employment-and-unemployment-rate' %}">
                     <div class="card-header justify-content-center">
                         <img src="{% static 'images/icons/self-employed.png' %}" class="img-fluid" width="80" style="position:absolute; left:90px; max-height:90px" />
-                        <h6 class="card-title px-2" style="font-weight:800; margin-top: 100px; text-align: center; font-size: 16px;">Employment & Unemployment Rate</h6>
+                        <h6 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center; font-size: 16px;">Unemployment Rate</h6>
                         <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">3.6%</h3>
                     </div>
                 </a>
@@ -102,11 +114,11 @@
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3 mb-4">
             <div class="card text-center">
-                <a href="{% url 'jobs' %}">
+                <a href="#">
                     <div class="card-header justify-content-center">
                         <img src="{% static 'images/icons/job-search.png' %}" class="img-fluid" width="80" style="position:absolute; left:90px; max-height:90px" />
-                        <h6 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center; font-size: 16px;">Stock of Job Vacancies</h6>
-                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">{{jobs_count}}</h3>
+                        <h6 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center; font-size: 16px;">Employment Rate</h6>
+                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">3.6%</h3>
                     </div>
                 </a>
             </div>
