--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="{% static 'styles/css/bootstrap.min.css' %}"> 
     <link rel="stylesheet" href="{% static 'styles/css/owl.carousel.min.css' %}"> 
@@ -25,8 +26,11 @@
     <link rel="stylesheet" href="{% static 'styles/css/themify-icons.css' %}"> 
     <link rel="stylesheet" href="{% static 'styles/css/slick.css' %}"> 
     <link rel="stylesheet" href="{% static 'styles/css/nice-select.css' %}"> 
-    <link rel="stylesheet" href="{% static 'styles/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/css/style.css' %}"> 
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
     <style>
       /* Define the size of the Plotly visualization container */
       #plot-container {
@@ -34,6 +38,7 @@
           height: 400px;
       }
     </style>
+    {% block head %}{% endblock head %}
   </head>
   <body style="background-color:white">
 
@@ -52,10 +57,10 @@
           <div class="col-md-4">
             <h5 class="text-white text-bold">Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="https://mof.gov.sl/" class="text-white">Ministry of Finance</a></li>
-              <li><a href="https://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html" class="text-white">Statistics Sierra Leone</a></li>
-              <li><a href="https://www.ilo.org/africa/countries-covered/sierra-leone/lang--en/index.htm" class="text-white">Internation Labour Organization (ILO)</a></li>
-              <li><a href="https://ilostat.ilo.org/data/country-profiles/" class="text-white">Internation Labour Organization (ILOSTAT)</a></li>
+              <li class="mb-2"><a href="https://mof.gov.sl/" class="text-white">Ministry of Finance</a></li>
+              <li class="mb-2"><a href="https://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html" class="text-white">Statistics Sierra Leone</a></li>
+              <li class="mb-2"><a href="https://www.ilo.org/africa/countries-covered/sierra-leone/lang--en/index.htm" class="text-white">Internation Labour Organization (ILO)</a></li>
+              <li class="mb-2"><a href="https://ilostat.ilo.org/data/country-profiles/" class="text-white">Internation Labour Organization (ILOSTAT)</a></li>
               <li><a href="https://data.worldbank.org/indicator/SL.TLF.ACTI.FE.ZS?locations=SL" class="text-white">The World Bank</a></li>
             </ul>
           </div>
@@ -69,9 +74,9 @@
           <div class="col-md-4">
             <h5 class="text-white text-bold">Connect With Us</h5>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Facebook</a></li>
-              <li><a href="#" class="text-white">Twitter</a></li>
-              <li><a href="#" class="text-white">LinkedIn</a></li>
+              <li><a href="#" class="text-white"><i class="bi bi-facebook fs-2 text-center" style="padding-left: 60px;"></i></a></li>
+              <li><a href="#" class="text-white"><i class="bi bi-twitter fs-2 text-center" style="padding-left: 60px;"></i></a></li>
+              <li><a href="#" class="text-white"><i class="bi bi-linkedin fs-2 text-center" style="padding-left: 60px;"></i></a></li>
             </ul>
         </div>
       </div>
