--- a/accounts/templates/employers.html
+++ b/accounts/templates/employers.html
@@ -33,7 +33,7 @@
             <div class="mt-8">
                 <div class="grid grid-cols-12 gap-8">
                     {% for employer in company %}
-                    <div class="col-span-12 col-lg-4">
+                    <div class="col-12 col-lg-4 mb-4">
                         <div class="relative px-6 py-12 border" style="border-radius: 10px; border-color: gray;">
                             <div class="d-flex justify-content-center"> <!-- Center the image horizontally -->
                                 <img src="{{ employer.company_logo.url }}" alt="" class="img-fluid">
