--- a/accounts/templates/employers.html
+++ b/accounts/templates/employers.html
@@ -31,7 +31,7 @@
         <div class="container mx-auto">
             
             <div class="mt-8">
-                <div class="grid grid-cols-12 gap-8">
+                <div class="row">
                     {% for employer in company %}
                     <div class="col-12 col-lg-4 mb-4">
                         <div class="relative px-6 py-12 border" style="border-radius: 10px; border-color: gray;">
