--- a/jobs/templates/application_success.html
+++ b/jobs/templates/application_success.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
 
 <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
